Finalna struktura i setup projekta Gde-Kako.rs

--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,4 @@
-# Node
-node_modules/
-.next/
-out/
-
-# Env fajlovi
-.env*
+node_modules
+.next
+out
 .env.local
-
-# Logs i privremeni podaci
-logs/
-*.log
-.DS_Store
-
-# OS fajlovi
-Thumbs.db
