--- a/package.json
+++ b/package.json
@@ -1,5 +1,17 @@
 {
+  "name": "gdekako-new",
+  "version": "1.0.0",
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build && next export"
+  },
   "dependencies": {
+    "next": "14.2.3",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "openai": "^4.97.0"
+  },
+  "devDependencies": {
+    "@types/react": "^18.2.15"
   }
 }
