--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
     "build": "next build && next export"
   },
   "dependencies": {
-    "next": "14.2.3",
+    "next": "^14.2.28",
+    "openai": "^4.97.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "openai": "^4.97.0"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@types/react": "^18.2.15"
+    "@types/react": "^18.2.15",
+    "typescript": "^5.8.3"
   }
 }
