--- a/package.json
+++ b/package.json
@@ -3,16 +3,16 @@
   "version": "1.0.0",
   "scripts": {
     "dev": "next dev",
-    "build": "next build && next export"
+    "build": "next build"
   },
   "dependencies": {
-    "next": "^14.2.28",
+    "next": "14.2.3",
     "openai": "^4.97.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@types/react": "^18.2.15",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "@types/react": "^18.2.15"
   }
 }
