--- a/package.json
+++ b/package.json
@@ -3,16 +3,18 @@
   "version": "1.0.0",
   "scripts": {
     "dev": "next dev",
-    "build": "next build"
+    "build": "next build && next export",
+    "start": "next start"
   },
   "dependencies": {
-    "next": "14.2.3",
-    "openai": "^4.97.0",
+    "next": "14.2.28",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "openai": "^4.19.0"
   },
   "devDependencies": {
-    "typescript": "^5.8.3",
-    "@types/react": "^18.2.15"
+    "typescript": "^5.0.0",
+    "@types/react": "^18.0.28",
+    "@types/node": "^18.0.0"
   }
 }
