--- a/package.json
+++ b/package.json
@@ -3,18 +3,17 @@
   "version": "1.0.0",
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && next export",
     "start": "next start"
   },
   "dependencies": {
-    "next": "14.2.28",
+    "next": "14.2.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "openai": "^4.19.0"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
     "typescript": "^5.0.0",
-    "@types/react": "^18.0.28",
-    "@types/node": "^18.0.0"
+    "@types/react": "^18.0.0",
+    "@types/node": "^20.0.0"
   }
 }
