--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,9 @@
 {
-  "compilerOptions": {
+  
+    "compilerOptions": {
+    "baseUrl": ".",
+    "paths": 
+    "@/*": ["./*"],
     "target": "ES6",
     "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
