Fix: full package.json with Next dependencies

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,7 @@
 {
-  
-    "compilerOptions": {
+   "compilerOptions": {
     "baseUrl": ".",
-    "paths": 
+    "paths":,
     "@/*": ["./*"],
     "target": "ES6",
     "lib": ["dom", "dom.iterable", "esnext"],
